--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "python-dateutil>=2.8.2",
     "eth-account>=0.9.0",
     "eth-utils>=2.3.0",
+    "py-clob-client>=0.20.0",
 ]
 
 [project.scripts]
