--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ python-dateutil>=2.8.2
 eth-account>=0.9.0
 eth-utils>=2.3.0
 nest-asyncio>=1.5.8
+py-clob-client>=0.20.0
 
 # Documentation generation
 markdown>=3.4.0
